CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#About project
#---------------------
SET(PROJECT_NAME sqlite3)
PROJECT (${PROJECT_NAME})
SET(VERSION_MAJOR "1")
SET(VERSION_MINOR "0")
SET(VERSION_PATCH "0")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

SET(SQLITE3_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(SQLITE3_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE) 

SET(CMAKE_CXX_FLAGS "-fPIC -g -Wall")

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)

#INCLUDE_DIRECTORIES (inc)
SET(LIB_SRC
		${PROJECT_SOURCE_DIR}/sqlite3.c)

#####################################
# Libraries & Executables & Directory
#####################################
ADD_LIBRARY(${PROJECT_NAME} ${LIB_SRC})
